[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["Pablo González Rubio, Sergio García González"]

[tool.poetry.scripts]
start = "main.main:start"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.27.1"
fastapi = "^0.74.1"
uvicorn = "^0.17.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
